# DevDoo

./: .gitignore  CMakeLists.txt  README.md  todo.c
.github/workflows/: cmake-multi-platform.yml
src/: todo.c  todo.h
tests/: test_todo.c
